--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "android": "npm run build && npx cap sync && npx cap open android"
+    "android": "npm run build && npx cap sync && npx cap open android",
+    "deploy": "npm run build && npx gh-pages -d dist"
   },
   "dependencies": {
     "@capacitor/android": "^5.7.8",
@@ -30,6 +31,7 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
